--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -1,5 +1,32 @@
 .Product {
   width: 100%;
-  background-color: blueviolet;
+  background-color: #2ecc71;
   margin-bottom: 10px;
+  display: flex;
+  padding: 10px 10px;
+  box-sizing: border-box;
+
+}
+
+.ImgWrap {
+  width: 20%;
+}
+
+.ImgWrap img {
+  width: 100%;
+}
+
+.ProductContainer {
+  display: flex;
+  flex-direction: column;
+  justify-items: center;
+  width: 100%;
+  justify-content: center;
+  text-align: center;
+}
+
+.ProductContainer button {
+  width: 20%;
+  margin: 0 auto;
+
 }
