add modal that position it self correctly

--- a/src/components/Layout/Header/ShoppingBag/ShoppinBag.css
+++ b/src/components/Layout/Header/ShoppingBag/ShoppinBag.css
@@ -1,5 +1,19 @@
-/* .ShoppingBag p {
-  background-color: cadetblue;
-  color: white;
+.BagImg {
+  width: 100px;
+  height: 100px;
   cursor: pointer;
-} */
+  text-decoration:none;
+  font-family:Arial;
+  display: block;
+  z-index: 10000000000000;
+}
+
+.BagContainer {
+  display: flex;
+
+  justify-content: space-between;
+  align-items: center;
+  color: #16a085;
+
+}
+
