--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -1,6 +1,6 @@
 .Product {
   width: 100%;
-  background-color: #2ecc71;
+  background-color: white;
   margin-bottom: 10px;
   display: flex;
   padding: 10px 10px;
