--- a/src/components/Layout/Header/Header.css
+++ b/src/components/Layout/Header/Header.css
@@ -1,13 +1,23 @@
 .Header {
-    background: #ecf0f1;
-    padding: 32px 0;
-    height: 100px;
-    box-shadow: 0px 8px 18px rgba(0, 0, 0, 0.033);
-    display: flex;
-    justify-items: center;
-    justify-content: space-around;
+    background: white;
+    padding: 0;
+    box-shadow: -1px 8px 18px rgba(0, 0, 0, 0.4);
     position: fixed;
     top: 0;
     width: 100%;
     z-index: 100;
+}
+
+
+.Container {
+    display: flex;
+    justify-items: center;
+    justify-content: space-around;
+    margin: 0 auto;
+    width: 80%;
+
+}
+
+.Container h1 {
+    color: #16a085;
 }
