--- a/src/components/Layout/Modal/Modal.css
+++ b/src/components/Layout/Modal/Modal.css
@@ -10,8 +10,9 @@
   transition: all 0.3s ease-out;
   height: 500px;
   width: 500px;
-  right: 10%;
-  top: 8%;
+
+  transform: translate(30px, 100px);
+  border: solid #16a085 1px;
   
 }
 
@@ -26,4 +27,19 @@
   bottom: 0;
   right: 20px;
   z-index: 550;
+}
+
+
+.Point {
+  height: 20px;
+  width: 20px;
+  background-color: white;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+  position: absolute;
+  top: -11px;
+  right: 40px;
+  border-top:    1px solid #16a085;
+  border-left: 1px solid #16a085;
 }
